crates/sourcepawn_lsp/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__methodmaps__methodmap_method_5.snap
---
source: crates/sourcepawn_lsp/tests/text_document/goto_definition/methodmaps.rs
assertion_line: 93
expression: "goto_definition(r#\"\n%! main.sp\nmethodmap Foo {\n    public void Foo() {}\n    public void Bar() {\n        this.Foo();\n              |\n              ^\n    }\n}\n\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 3,
        "character": 13
      },
      "end": {
        "line": 3,
        "character": 16
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 1,
        "character": 4
      },
      "end": {
        "line": 1,
        "character": 24
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 1,
        "character": 16
      },
      "end": {
        "line": 1,
        "character": 19
      }
    }
  }
]
