crates/sourcepawn_lsp/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__methodmaps__methodmap_method_7.snap
---
source: crates/sourcepawn_lsp/tests/text_document/goto_definition/methodmaps.rs
assertion_line: 130
expression: "goto_definition(r#\"\n%! main.sp\nmethodmap Foo {\n    public void Foo() {int bar}\n}\n\nFoo foo;\n\nvoid main() {\n    int bar;\n    foo.Foo(bar);\n             |\n             ^\n}\n\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 8,
        "character": 12
      },
      "end": {
        "line": 8,
        "character": 15
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 7,
        "character": 8
      },
      "end": {
        "line": 7,
        "character": 11
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 7,
        "character": 8
      },
      "end": {
        "line": 7,
        "character": 11
      }
    }
  }
]
