crates/sourcepawn_lsp/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__methodmaps__methodmap_native_method_2.snap
---
source: crates/sourcepawn_lsp/tests/text_document/goto_definition/methodmaps.rs
assertion_line: 165
expression: "goto_definition(r#\"\n%! main.sp\nmethodmap Foo {\n    public native int Foo(int foo);\n                               |\n                               ^\n}\n\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 1,
        "character": 30
      },
      "end": {
        "line": 1,
        "character": 33
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 1,
        "character": 26
      },
      "end": {
        "line": 1,
        "character": 33
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 1,
        "character": 30
      },
      "end": {
        "line": 1,
        "character": 33
      }
    }
  }
]
